assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Oswald:wght@200;300;400;500;600;700&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project styles */
    color: #343434;
    font-family: 'Inter', sans-serif;
    background-color: black;
}

h1, h2, h3 {
    font-family: 'Inter', sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #f5f5f5;
}

/* Header */
header {
    background-color: #343434;
    padding: 0 1rem;
    position: fixed;
    z-index: 100;
    width: 100%;
    box-shadow: 0 2px 2px #3a3a3a;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}
header a {
    text-decoration: none;
    color: #f5f5f5;
}

#menu {
    font-size: 110%;
    letter-spacing: 4px;
    list-style-type: none;
}

#menu > li {
    margin-bottom: 1em;
}

.active {
    border-bottom: 1px solid #3a3a3a;
}

/* Navbar styles with dropdown toggle */
nav {
    position: absolute;
    background-color: #343434;
    width: 100%;
    height: 100px;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 2px 2px #3a3a3a;
    display: none;
    top: 100%;
}
/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}
/* Main content */
main {
    /* Enlarge main element to push footer down*/
    flex: 1 0 auto;
    /* Add margin at the top to prevent content from being covered by the header */
    margin-top: 56px;
    /* Enable flex properties for child elements */
    display: flex;
    flex-direction: column;
}

/* Hero section */
#hero {
    height: 600px;
    width: 100%;
    background: url("../images/9.jpeg") no-repeat center center/cover;
    position: relative;
    margin-bottom: 10px;
}
#cover-text {
    color: #f5f5f5;
    margin-top: 400px;
    margin-left: 150px;
}

/*why us section*/
#why-us {
    background-color: black;
    color: #f5f5f5;
}

#benefits {
    color: #f5f5f5;
}

#why-us h2 {
    margin-bottom: 20px;
    text-align: center;
    font-size: 280%;
}

#whyus-pride > div
#whyus-mental >div {
    line-height: 20px;
    margin-bottom: 20px;
}

#whyus-image {
    display: flex;
    align-items: center;
    justify-content: center;
}

#why-us hr {
    border-top: 1px solid #3a3a3a;
    margin: 5px 0;
}

#why-us p {
    padding: 0 20px;
}
#circle-image-bg {
    background: url('../images/2.jpeg') no-repeat top center / cover;
    height: 90vw;
    width: 90vw;
    margin-bottom: 20px;
    /* Makes the square image into a circle */
    border-radius: 50%;
    max-width: 300px;
    max-height: 300px;
}
#open-hours {
        /* Handles responsivity without the need for a media query */
        display: flex;
        flex-wrap: wrap;
    
}

map > span {
    height: 600px;
}

/* Media query: large or landscape phones (576px and up) */
@media screen and (min-width: 576px) {
    #photos {
        column-count: 2;
        column-gap: 0;
    }
}

